<?xml version="1.0"?>
<package format="2">
  <name>livox_laser_simulation</name>
  <version>0.0.0</version>
  <description>The livox_laser_simulation package</description>

  <maintainer email="lfc@todo.todo">lfc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>livox_ros_driver</build_depend>
  <build_depend>tf</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>livox_ros_driver</exec_depend>
  <exec_depend>tf</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
